Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -170,7 +170,7 @@ footer {
 		height: auto;
 		border: none;
 		background-size: 95%;
-		background-image: none
+		background-image: none;
 		background-repeat: repeat-y;
 	  	background-position: center;
 		background-attachment: scroll;
